Resized profile and about-me images; fixed LinkedIn icon link issue

--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
                     
                     <img src="./assets/linkedin.png" alt="Linkedin icon" class="icon contact-icon">
                     <p>
-                        <a href="mailto:tringo831@gmail.com">LinkedIn</a>
-                    </p>
+                        <a href="https://www.linkedin.com/in/tringo286" target="_blank">LinkedIn</a>
+                    </p>            
                 </div>
                 <div class="contact-info-container">
                     <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon">
