--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <li><a href="#expertise">Expertise</a></li>                
             <li><a href="#projects">Projects</a></li>                
             <li><a href="#contact">Contact</a></li>                
-        </ul>       
+        </ul>   
+        <button class="dark-mode-button" conclick="darkModetoggle()">Dark Mode</button>       
     </nav>
     <nav id="hamburger-nav">
         <div class="logo">Tri Ngo</div>
@@ -37,7 +38,7 @@
                 <li><a href="#projects">Projects</a></li>                
                 <li><a href="#contact">Contact</a></li> 
             </div>
-        </div>
+        </div>        
     </nav>    
     <section id="profile">
         <div class="section-pic-container">
@@ -156,66 +157,72 @@
             <div class="details-container">            
                 <div class="detail-container">
                     <div class="article-container">
-                        <img src="./assets/Decryptoid.png" alt="Project 1" class="project-img">
+                        <img src="./assets/Decryptoid.jpg" alt="Project 1" class="project-img">
                     </div>
-                    <h2 class="expertise-sub-title project-title">Decryptoid</h2>
-                    <p>
-                        Decryptoid is a web app for secure text encryption and decryption. Users can sign up, log in, and encrypt or decrypt text using ciphers like Simple Substitution, Double Transposition, and RC4. With secure session management and a MySQL database for storing user data, it ensures strong data protection throughout the process.
-                    </p>
-                    <div class="button-containter">
-                       <button 
-                        class="btn btn-color-2 project-btn"
-                        onclick="window.open('https://github.com/tringo286/Decryptoid', '_blank')">
-                        Github    
-                        </button> 
+                    <div class="content-container">
+                        <h2 class="expertise-sub-title project-title">Decryptoid</h2>
+                        <p>
+                            Decryptoid is a web app for secure text encryption and decryption. Users can sign up, log in, and encrypt or decrypt text using ciphers like Simple Substitution, Double Transposition, and RC4. With secure session management and a MySQL database for storing user data, it ensures strong data protection throughout the process.
+                        </p>
+                        <div class="button-containter">
                         <button 
-                        class="btn btn-color-2 project-btn"
-                        onclick="window.open('https://github.com/tringo286/Decryptoid', '_blank')">
-                        View    
-                        </button>   
-                        </button>
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Decryptoid', '_blank')">
+                            Github    
+                            </button> 
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Decryptoid', '_blank')">
+                            View    
+                            </button>   
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="detail-container">
                     <div class="article-container">
                         <img src="./assets/Olympia.png" alt="Project 2" class="project-img">
                     </div>
-                    <h2 class="expertise-sub-title project-title">Olympia</h2>
-                    <p>
-                        Olympia is a hotel booking app designed for seamless online room reservations. Built with React.js and Node.js, it offers user authentication, advanced search with filtering, reservation management, and integrated payment solutions. The app includes a user-friendly rewards program to enhance the booking experience.
-                    </p>
-                    <div class="button-containter">
-                        <button 
-                        class="btn btn-color-2 project-btn"
-                        onclick="window.open('https://github.com/tringo286/Olympia', '_blank')">
-                        Github    
-                        </button>
-                        <button 
-                        class="btn btn-color-2 project-btn"
-                        onclick="window.open('https://github.com/tringo286/Olympia', '_blank')">
-                        View    
-                        </button>
+                    <div class="content-container">
+                        <h2 class="expertise-sub-title project-title">Olympia</h2>
+                        <p>
+                            Olympia is a hotel booking app designed for seamless online room reservations. Built with React.js and Node.js, it offers user authentication, advanced search with filtering, reservation management, and integrated payment solutions. The app includes a user-friendly rewards program to enhance the booking experience.
+                        </p>
+                        <div class="button-containter">
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Olympia', '_blank')">
+                            Github    
+                            </button>
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Olympia', '_blank')">
+                            View    
+                            </button>
+                        </div>
                     </div>
                 </div>
                 <div class="detail-container">
                     <div class="article-container">
                         <img src="./assets/chathub.png" alt="Project 3" class="project-img">
                     </div>
-                    <h2 class="expertise-sub-title project-title">Chathub</h2>
-                    <p>
-                        ChatHub is a real-time chat application built using Node.js, Express, and Socket.io. It features multiple chat rooms, custom usernames, live messaging, and real-time join/leave notifications, creating a seamless and engaging communication experience for users.                        
-                    </p>
-                    <div class="button-containter">
-                        <button 
-                        class="btn btn-color-2 project-btn"
-                        onclick="window.open('https://github.com/tringo286/Chathub', '_blank')">
-                        Github    
-                        </button>
-                        <button 
-                        class="btn btn-color-2 project-btn"
-                        onclick="window.open('https://github.com/tringo286/Chathub', '_blank')">
-                        View    
-                        </button>
+                    <div class="content-container">
+                        <h2 class="expertise-sub-title project-title">Chathub</h2>
+                        <p>
+                            ChatHub is a real-time chat application built using Node.js, Express, and Socket.io. It features multiple chat rooms, custom usernames, live messaging, and real-time join/leave notifications, creating a seamless and engaging communication experience for users.                        
+                        </p>
+                        <div class="button-containter">
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Chathub', '_blank')">
+                            Github    
+                            </button>
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Chathub', '_blank')">
+                            View    
+                            </button>
+                        </div>
                     </div>
                 </div>               
             </div>      
