--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Tri Ngo | Portfolio</title>
     
     <link rel="stylesheet" href="style.css">
@@ -21,11 +22,12 @@
             <li><a href="#expertise">Expertise</a></li>                
             <li><a href="#projects">Projects</a></li>                
             <li><a href="#contact">Contact</a></li>                
-        </ul>   
-        <button class="dark-mode-button" conclick="darkModetoggle()">Dark Mode</button>       
+        </ul>           
+        <i class="far fa-user theme-icon" onclick="darkModetoggle()"></i>   
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Tri Ngo</div>
+        <div class="logo"><a href="#profile">Tri Ngo</a></div>
+        <i class="far fa-user theme-icon" onclick="darkModetoggle()"></i>   
         <div class="hamburger-menu">
             <div class="hamburger-menu-icon" onclick="toggleMenu()">
                 <span></span>    
@@ -68,7 +70,7 @@
             <div class="about-container">                
                 <div class="detail-container">
                     <div class="education-container">
-                        <img src="./assets/mortarboard.png" alt="Education icon" class="icon">
+                        <img src="./assets/mortarboard.png" alt="Education icon" class="icon education-icon">
                         <h3>Education</h3>
                     </div>
                     <h4>San Jose State University</h4>
@@ -105,7 +107,7 @@
                     </div>                    
                     <div class="column">
                         <article>                       
-                            <img src="./assets/js-5.png" alt="Expertise icon" class="icon">
+                            <img src="./assets/js-5.png" alt="Expertise icon" class="icon js-icon">
                            <h3>Javascript</h3>
                        </article>                    
                        <article>
@@ -124,7 +126,7 @@
                             <h3>Node JS</h3>
                         </article>                    
                         <article>
-                            <img src="./assets/next-js.png" alt="Expertise icon" class="icon">
+                            <img src="./assets/next-js.png" alt="Expertise icon" class="icon next-js-icon">
                             <h3>Next JS</h3>
                         </article>                    
                         <article>
@@ -228,7 +230,8 @@
             </div>      
             <button class="carousel-control-prev" onclick="prevSlide()">&#10094;</button>
             <button class="carousel-control-next" onclick="nextSlide()">&#10095;</button>
-        </div>        
+        </div>
+        <div class="dot-navigation"></div>        
     </section>    
     <section id="contact">        
         <div class="contact-container">
@@ -251,17 +254,8 @@
             </div>
         </div>        
     </section>    
-    <!-- <footer>
-        <nav>
-            <div class="nav-links-container">
-              <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </div>
-        </nav>
-    </footer> -->   
+    <footer>
+        <p> © Tri Ngo. All right reserved</p> 
+    </footer>   
 </body>
 </html>
