--- a/index.html
+++ b/index.html
@@ -226,8 +226,32 @@
                             </button>
                         </div>
                     </div>
-                </div>               
+                </div>    
+                <div class="detail-container">
+                    <div class="article-container">
+                        <img src="./assets/productStore.png" alt="Project 3" class="project-img">
+                    </div>
+                    <div class="content-container">
+                        <h2 class="expertise-sub-title project-title">Product Store</h2>
+                        <p>
+                            Product Store is a full-stack e-commerce application built with React.js, Node.js, Express, and MongoDB. It allows users to create, update, and delete products, providing a responsive user interface powered by Chakra UI                        
+                        </p>
+                        <div class="button-containter">
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Product-Store', '_blank')">
+                            Github    
+                            </button>
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://product-store-8jwf.onrender.com/', '_blank')">
+                            View    
+                            </button>
+                        </div>
+                    </div>
+                </div>           
             </div>      
+            <div class="bullet-nav"></div>
             <button class="carousel-control-prev" onclick="prevSlide()">&#10094;</button>
             <button class="carousel-control-next" onclick="nextSlide()">&#10095;</button>
         </div>
