Update expense tracker app in project section

--- a/index.html
+++ b/index.html
@@ -166,7 +166,56 @@
         <p class="section_text_p1">Browse my</p>
         <h1 class="title">Projects</h1>
         <div class="carousel-container">
-            <div class="details-container">            
+            <div class="details-container"> 
+                
+                <div class="detail-container">
+                    <div class="article-container">
+                        <img src="./assets/productStore.avif" alt="Project 3" class="project-img">
+                    </div>
+                    <div class="content-container">
+                        <h2 class="expertise-sub-title project-title">Product Store</h2>
+                        <p>
+                            Product Store is a full-stack e-commerce application built with React.js, Node.js, Express, and MongoDB. It allows users to create, update, and delete products, providing a responsive user interface powered by Chakra UI                        
+                        </p>
+                        <div class="button-containter">
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Product-Store', '_blank')">
+                            Github    
+                            </button>
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://product-store-8jwf.onrender.com/', '_blank')">
+                            View    
+                            </button>
+                        </div>
+                    </div>
+                </div>    
+
+                <div class="detail-container">
+                    <div class="article-container">
+                        <img src="./assets/expense_tracker.png" alt="Project 3" class="project-img">
+                    </div>
+                    <div class="content-container">
+                        <h2 class="expertise-sub-title project-title">Expese Tracker</h2>
+                        <p>
+                            A full-stack expense tracker app built using React, Node, Express, MongoDB, and styled with Tailwind CSS. This app helps users track their income and expenses securely, offering administrative control for managing users' data.                       
+                        </p>
+                        <div class="button-containter">
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://github.com/tringo286/Expense-Tracker', '_blank')">
+                            Github    
+                            </button>
+                            <button 
+                            class="btn btn-color-2 project-btn"
+                            onclick="window.open('https://spendings-tracker-app.netlify.app/', '_blank')">
+                            View    
+                            </button>
+                        </div>
+                    </div>
+                </div> 
+
                 <div class="detail-container">
                     <div class="article-container">
                         <img src="./assets/Decryptoid.jpg" alt="Project 1" class="project-img">
@@ -191,6 +240,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="detail-container">
                     <div class="article-container">
                         <img src="./assets/Olympia.avif" alt="Project 2" class="project-img">
@@ -214,6 +264,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="detail-container">
                     <div class="article-container">
                         <img src="./assets/Chathub.avif" alt="Project 3" class="project-img">
@@ -236,30 +287,8 @@
                             </button>
                         </div>
                     </div>
-                </div>    
-                <div class="detail-container">
-                    <div class="article-container">
-                        <img src="./assets/productStore.avif" alt="Project 3" class="project-img">
-                    </div>
-                    <div class="content-container">
-                        <h2 class="expertise-sub-title project-title">Product Store</h2>
-                        <p>
-                            Product Store is a full-stack e-commerce application built with React.js, Node.js, Express, and MongoDB. It allows users to create, update, and delete products, providing a responsive user interface powered by Chakra UI                        
-                        </p>
-                        <div class="button-containter">
-                            <button 
-                            class="btn btn-color-2 project-btn"
-                            onclick="window.open('https://github.com/tringo286/Product-Store', '_blank')">
-                            Github    
-                            </button>
-                            <button 
-                            class="btn btn-color-2 project-btn"
-                            onclick="window.open('https://product-store-8jwf.onrender.com/', '_blank')">
-                            View    
-                            </button>
-                        </div>
-                    </div>
-                </div>           
+                </div>                  
+
             </div>      
             <div class="bullet-nav"></div>
             <button class="carousel-control-prev" onclick="prevSlide()">&#10094;</button>
