Update photo of chathub project

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
           <div class="detail-container">
             <div class="article-container">
               <img
-                src="./assets/ChatHub.png"
+                src="./assets/chathub.png"
                 alt="Project 3"
                 class="project-img"
               />
